--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
             </svg>
           </div>
           <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-            <li><a class="text-[15px] font-[600] text-orange-600">Home</a></li>
+            <li><a class="text-[15px] font-[600] text-orange-700">Home</a></li>
             <li> <a class="text-[15px] font-[400] text-[#424247]">About</a></li>
             <li><a class="text-[15px] font-[400] text-[#424247]">Product</a></li>
             <li><a class="text-[15px] font-[400] text-[#424247]">Pages</a></li>
             <li><a class="text-[15px] font-[400] text-[#424247]">Contact</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost font-[800] text-[36px]">Hocky<span class="text-red-600">'</span> S</a>
+        <a class="btn btn-ghost font-[800] text-[36px]">Hocky<span class="text-orange-700">'</span> S</a>
       </div>
       <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
-          <li><a class="text-[15px] font-[600] text-orange-600">Home</a></li>
+          <li><a class="text-[15px] font-[600] text-orange-700">Home</a></li>
           <li> <a class="text-[15px] font-[400] text-[#424247]">About</a></li>
           <li><a class="text-[15px] font-[400] text-[#424247]">Product</a></li>
           <li><a class="text-[15px] font-[400] text-[#424247]">Pages</a></li>
@@ -46,7 +46,7 @@
       </div>
       <div class="navbar-end">
         <i class="fa-solid fa-magnifying-glass mr-[20px] opacity-50 hidden lg:flex"></i>
-        <a class="text-white btn class= bg-[#FF4240] hover:bg-sky-700">Get Ticket</a>
+        <a class="text-white btn class= bg-red-700 hover:bg-sky-700">Get Ticket</a>
       </div>
     </div>
     </div>
@@ -138,10 +138,10 @@
           </div>
 
           <div class="text-center space-y-5">
-            <div class="radial-progress text-[#2a6a4c]" style="--value:95" role="progressbar">
+            <div class="radial-progress text-green-600" style="--value:95" role="progressbar">
               <span class="text-black">95%</span>
             </div>
-            <h4 class="text-[20px] font-[600] text-[#04040b]">
+            <h4 class="text-[20px] font-[600] text-black">
               Experienced Coach
             </h4>
             <h6 class="text-[16px] font-[400]">
@@ -152,7 +152,7 @@
             <div class="radial-progress text-yellow-500 font-[800]" style="--value: 90" role="progressbar">
               <span class="text-black">90%</span>
             </div>
-            <h4 class="text-[20px] font-[600] text-[#131318]">Senior Player</h4>
+            <h4 class="text-[20px] font-[600] text-black">Senior Player</h4>
             <h6 class="text-[16px] font-[400]">
               National level senior playes was student here.
             </h6>
@@ -161,7 +161,7 @@
             <div class="radial-progress text-[#2c5189] font-[800]" style="--value: 80" role="progressbar">
               <span class="text-black">80%</span>
             </div>
-            <h4 class="text-[20px] font-[600] text-[#131318]">Training Ground</h4>
+            <h4 class="text-[20px] font-[600] text-black">Training Ground</h4>
             <h6 class="text-[16px] font-[400]">Training ground fosters athlete development.</h6>
           </div>
         </div>
@@ -173,7 +173,7 @@
 
     <div class="border-dashed border-t  border-black w-full lg:mt-[100px] my-4"></div>
     <div class="w-100% lg:w-[607px] text-center mx-auto mt-5 lg:mt-[50px] space-y-5">
-      <h1 class="text-[28px] lg:text-[35px] font-[800] text-[#131318]">Program Sections</h1>
+      <h1 class="text-[28px] lg:text-[35px] font-[800] text-black">Program Sections</h1>
       <p class="text-[15px] text-black">
         Learn the ins and outs of tactical play, positioning, and game strategy.
         Gain a competitive edge with in-depth knowledge shared by our seasoned coaching team.</p>
@@ -191,7 +191,7 @@
               specially crafted to introduce kids to the joys of the
               sport while focusing on skill development, teamwork, and fostering a love for the game.
             </p>
-            <button class="btn lg:-ml-[330px] bg-[#d9413f] text-white border-0">Register Now</button>
+            <button class="btn lg:-ml-[330px] bg-red-700 text-white border-0">Register Now</button>
           </div>
         </div>
       </div>
@@ -204,7 +204,7 @@
             <p class="mb-5 lg:text-left">
               Calling all teenage hockey enthusiasts! Elevate your game with our exclusive
               Teen Hockey Program at Hockey Club.</p>
-            <button class="btn lg:-ml-[330px] bg-[#a12e2d] text-white border-0">Register Now</button>
+            <button class="btn lg:-ml-[330px] bg-red-700 text-white border-0">Register Now</button>
           </div>
         </div>
       </div>
@@ -218,7 +218,7 @@
             <p class="mb-5 lg:text-left">
               Elevate your hockey game to the professional level with Hockey Club
               exclusive Professional Development Program.</p>
-            <button class="btn lg:-ml-[330px] bg-[#c93b38] text-white border-0">Register Now</button>
+            <button class="btn lg:-ml-[330px] bg-red-700 text-white border-0">Register Now</button>
           </div>
         </div>
       </div>
@@ -228,8 +228,8 @@
 
     <div class="border-dotted border-t  border-black w-full mt-[80px] lg:mt-[100px] my-4"></div>
     <div class="w-100% lg:w-[607px] text-center mx-auto mt-5 lg:mt-[50px] space-y-5">
-      <h1 class="text-[28px] lg:text-[36px] text-[#060607]">Our New Products</h1>
-      <p class="text-[16px] font-[500] text-[#00000099]">
+      <h1 class="text-[28px] lg:text-[36px] text-black">Our New Products</h1>
+      <p class="text-[16px] font-[500] text-black">
         Within our product lineup, the spotlight is on sports, presenting a varied selection of top-notch equipment,
         clothing, and
         accessories.Enhance your performance using our cutting-edge products crafted for both enthusiasts and athletes.
@@ -300,8 +300,8 @@
               <i class="fa-regular fa-heart"></i> 200
             </h6>
           </div>
-          <h2 class="card">World Cup Flags Football</h2>
-          <p>Flags wave, football unites: World Cup passion unfolds.</p>
+          <h2 class="card">Cap</h2>
+          <p>Cap youself ,reduce sun attack.</p>
           <div class="card-actions justify-between flex flex-col lg:flex-row">
             <h3 class="text-orange-600 font-[600]">Price - $220.00</h3>
             <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
@@ -372,7 +372,7 @@
               <i class="fa-regular fa-heart"></i>300
             </h6>
           </div>
-          <h2 class="card">World Cup Flag Football</h2>
+          <h2 class="card">Football</h2>
           <p>Flags flutter as football brings people together: The fervor of the World Cup unfolds.</p>
           <div class="card-actions justify-between flex flex-col lg:flex-row">
             <h3 class="text-orange-700">Price - $420.00</h3>
@@ -390,18 +390,171 @@
     <div class="w-100% lg:w-[607px] text-center mx-auto mt-5 lg:mt-[50px] space-y-5">
       <h1 class="text-[30px] lg:text-[35px] font-[800] text-black">Clients Question</h1>
       <p class="text-[15px] font-[500] text-black">
-        We highly appreciate and value the inquiries from our clients. Our committed team is dedicated to 
-        offering thoughtful responses, aiming to cultivate trust and guarantee satisfaction. 
-        Emphasizing transparent communication, 
+        We highly appreciate and value the inquiries from our clients. Our committed team is dedicated to
+        offering thoughtful responses, aiming to cultivate trust and guarantee satisfaction.
+        Emphasizing transparent communication,
         we strive to address concerns effectively, fostering enduring relationships with our clients.
       </p>
     </div>
 
-    
+    <div class=" flex flex-col w-full lg:flex-row p-[32px] border-gray-300 rounded-lg border-[1px]">
+      <div class="right h-full">
+        <img src="./Images/11.png" alt="" />
+      </div>
+      <div class="left lg:ml-10 space-y-5 mt-[20px] lg:mt-0 lg:space-y-7 w-full lg:w-[70%]">
+        <div class="collapse collapse-plus border-b-[5px] bg-base-200 w-full">
+          <input type="radio" name="my-accordion-3" class="" checked="checked" />
+          <div class="collapse-title text-xl font-medium">Our Equipment</div>
+          <div class="collapse-content">
+            <p>
+              Our selection of equipment highlights premium gear and accessories carefully chosen for both performance
+              and style.
+              Featuring state-of-the-art innovations,
+              our collection offers cutting-edge options for discerning enthusiasts.
+            </p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200 border-b-[5px] ">
+          <input type="radio" name="my-accordion-3" />
+          <div class="collapse-title text-xl font-medium">
+            Hockey Training
+          </div>
+          <div class="collapse-content">
+            <p>
+              Our training is international level curated for oth performance and style.Ranging from state-of-the-art
+              technology to carefully crafted ergonomic designs, our products set a new standard for excellence.
+            </p>
+          </div>
+        </div>
+
+        <div class="collapse collapse-plus border-b-[5px] bg-base-200">
+          <input type="radio" name="my-accordion-3" />
+          <div class="collapse-title text-xl font-medium">
+            Private Care
+          </div>
+          <div class="collapse-content">
+            <p>
+              Experience personalized care tailored exclusively for hockey players at our club.
+              Our private care services go beyond the ordinary,
+              addressing the unique needs of athletes in the sport
+            </p>
+          </div>
+        </div>
+
+        <div class="collapse collapse-plus border-b-[5px] bg-base-200">
+          <input type="radio" name="my-accordion-3" />
+          <div class="collapse-title text-xl font-medium">Sky Touring</div>
+          <div class="collapse-content">
+            <p>
+              There are some process in our club, contact with us by given number and mail below.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Get in touch section-->
+    <div class=" text-center w-100% lg:w-[607px] mx-auto mt-5 lg:mt-[50px] space-y-5">
+      <h1 class="text-[28px] lg:text-[36px] font-[800] text-black">
+        Get in Touch
+      </h1>
+      <p class="text-[16px] font-[500] text-black">
+        In the section dedicated to our products, the spotlight is on sports, presenting a varied selection of top-notch
+        gear,
+        clothing, and accessories. Enhance your performance with our cutting-edge products crafted for both enthusiasts
+        and
+        athletes, showcasing innovation and quality.
+      </p>
+    </div>
+    <div class="min-h-[564px] p-[10px] lg:p-[50px] w-full flex flex-col lg:flex-row">
+      <div class="right p-[15px] lg:p-[50px] rounded-lg w-full lg:w-[474px] space-y-4 border-gray-300 border-[1px]">
+        <div class="card h-[216px] w-full p-[48px] space-y-4 bg-[#FDDD5F1A]">
+          <img src="./Images/Group 1171275317.png" class="w-[48px] h-[48px]" alt="" />
+          <h4 class="font-[600]">
+            <span class="text-[16px] font-[300] text-gray-500">Phone Number :</span>
+            <br />
+            (+62) 123-321-543
+          </h4>
+        </div>
+        <div class="card h-[216px] w-full p-[48px] space-y-4 bg-[#6fa6f81a]">
+          <img src="./Images/Group 1171275318.png" class="w-[48px] h-[48px]" alt="" />
+          <h4 class="font-[600]">
+            <span class="text-[16px] font-[300] text-gray-500">Email :</span>
+            <br/>
+            hockeys@support.com
+          </h4>
+        </div>
+        <div class="card h-[216px] w-full p-[48px] space-y-4 bg-[#6fa6f81a]">
+          <img src="./Images/Group 1171275321.png" class="w-[48px] h-[48px]" alt="" />
+          <h4 class="font-[600]">
+            <span class="text-[16px] font-[300] text-gray-500">Location :</span>
+            <br />
+            152/1 Mohakhali Wireless Gate
+          </h4>
+        </div>
+      </div>
+
+      <div class="left w-full space-y-6 mt-[40px] lg:mt-0 lg:space-y-0">
+        <div class="flex w-full justify-evenly space-y-9 lg:space-y-0 lg:mb-[30px] flex-col lg:flex-row">
+          <label class="form-control w-full max-w-xs">
+            <div class="label">
+              <span class="label-text font-[700] text-[18px]">Enter Your Name</span>
+            </div>
+            <input type="text" placeholder="Enter Your Name" class="input input-bordered w-[380px] lg:w-full" />
+          </label>
+          <label class="form-control w-full max-w-xs">
+            <div class="label">
+              <span class="label-text font-[700] text-[18px]">Enter Your Mail</span>
+            </div>
+            <input type="text" placeholder="Enter Your Mail" class="input input-bordered w-[380px] lg:w-full" />
+          </label>
+        </div>
+        <div class="w-full flex space-y-6 lg:space-y-0 justify-evenly lg:mb-[30px] flex-col lg:flex-row">
+          <label class="w-full form-control max-w-xs">
+            <div class="label">
+              <span class="label-text font-[700] text-[18px]">Your Phone Number</span>
+            </div>
+            <input type="text" placeholder="Your Phone Number" class="input input-bordered w-[380px] lg:w-full" />
+          </label>
+          <label class="form-control w-full max-w-xs">
+            <div class="label">
+              <span class="label-text font-[700] text-[18px]">Subject</span>
+            </div>
+            <input type="text" placeholder="Subject" class="input input-bordered w-[380px] lg:w-full" />
+          </label>
+        </div>
+        <div class="lg:space-y-6">
+          <label class="form-control w-full lg:pr-[40px] mb-[30px] lg:ml-[20px]">
+            <div class="label">
+              <span class="label-text font-[700] text-[18px]">Massage</span>
+            </div>
+            <input type="text" placeholder="Send Your Massage"
+              class="input  input-bordered w-[380px] lg:w-full h-[60px] lg:h-[450px] input-lg lg:pr-[50px] " />
+          </label>
+
+          <button class="btn w-[380px] lg:w-[658px] lg:ml-[20px] bg-[#FF4240] text-white font-[600s]">Send Your Massage
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!--Social media section-->
+
+
+    <div class="social w-full h-[150px] text-center bg-[#13131808] mb-11 items-center rounded-xl flex flex-col space-y-5 justify-center">
+      <h2 class="text-[24px] font-[800] text-[#131318]">Social Media</h2>
+      <div class="mx-auto flex space-x-6">
+        <a href="" class=""><i class="fa-brands fa-twitter text-[40px]"></i></a>
+        <a href=""><i class="fa-brands fa-facebook text-[40px]"></i></a>
+        <a href=""><i class="fa-brands fa-instagram text-[40px]"></i></a>
+        <a href=""><i class="fa-brands fa-github text-[40px]"></i></a>
+      </div>
+
+    </div>
+
   </main>
 
 
-<!--Footer section-->
+  <!--Footer section-->
   <footer class="class= footer min-h-[200px] p-10 bg-black text-white text-base-content">
     <aside class="text-center space-y-3 lg:text-left">
       <h1 class="text-[29px] mx-auto font-[700] lg:mx-0">Get In Touch</h3>
