final code of assignment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <!--Navbar-->
+  <!--Navbar Section-->
   <header>
     <div class="navbar bg-base-100">
       <div class="navbar-start">
@@ -25,146 +25,147 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
             </svg>
           </div>
-          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+          <ul tabindex="0" class="menu menu-sm shadow bg-base-100 dropdown-content mt-3 z-[1] p-2 rounded-box w-52">
             <li><a class="text-[15px] font-[600] text-orange-700">Home</a></li>
-            <li> <a class="text-[15px] font-[400] text-[#424247]">About</a></li>
-            <li><a class="text-[15px] font-[400] text-[#424247]">Product</a></li>
-            <li><a class="text-[15px] font-[400] text-[#424247]">Pages</a></li>
-            <li><a class="text-[15px] font-[400] text-[#424247]">Contact</a></li>
+            <li><a class="text-[15px] font-[400] text-gray-600">About</a></li>
+            <li><a class="text-[15px] font-[400] text-gray-600">Product</a></li>
+            <li><a class="text-[15px] font-[400] text-gray-600">Pages</a></li>
+            <li><a class="text-[15px] font-[400] text-gray-600">Contact</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost font-[800] text-[36px]">Hocky<span class="text-orange-700">'</span> S</a>
+        <a class="btn btn-ghost font-[800] text-[36px]">Hockey<span class="text-orange-700">'</span>S</a>
       </div>
       <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
           <li><a class="text-[15px] font-[600] text-orange-700">Home</a></li>
-          <li> <a class="text-[15px] font-[400] text-[#424247]">About</a></li>
-          <li><a class="text-[15px] font-[400] text-[#424247]">Product</a></li>
-          <li><a class="text-[15px] font-[400] text-[#424247]">Pages</a></li>
-          <li><a class="text-[15px] font-[400] text-[#424247]">Contact</a></li>
+          <li> <a class="text-[15px] font-[400] text-gray-600">About</a></li>
+          <li><a class="text-[15px] font-[400] text-gray-600">Product</a></li>
+          <li><a class="text-[15px] font-[400] text-gray-600">Pages</a></li>
+          <li><a class="text-[15px] font-[400] text-gray-600">Contact</a></li>
         </ul>
       </div>
       <div class="navbar-end">
         <i class="fa-solid fa-magnifying-glass mr-[20px] opacity-50 hidden lg:flex"></i>
-        <a class="text-white btn class= bg-red-700 hover:bg-sky-700">Get Ticket</a>
+        <a class="text-white btn class= bg-red-600 hover:bg-gray-700">Get Ticket</a>
       </div>
     </div>
     </div>
+
     <br>
     <br>
     <br>
 
     <!--Carousal-->
 
-    <div class="container mx-5 my-5">
-      <div class="carousel w-500px ml-7 mt-[55px] lg:h-[550px] rounded-3xl">
+    <div class="carousel w-full mt-[58px] lg:h-[550px] rounded-3xl">
 
-        <div id="slide1" class="carousel-item relative w-full">
-          <img src="Images/1.png" class="w-full" />
+      <div id="slide1" class="carousel-item relative w-full">
+        <img src="Images/1.png" class="w-full" />
 
-          <div
-            class="w-[450px] hidden lg:block p-5 space-y-5 lg:right-[10%] lg:bottom-[10%] absolute h-[150px]  bg-black rounded-xl text-white">
-            <h3 class="text-[20px]">Meet All the Heroes from the Field</h3>
-            <p class="text-[15px] font-[400] text-gray-500">Are you ready to take your hockey team to new heights?
-              Our elite coaching services are tailored to transform your team into champions!</p>
-          </div>
-
-          <div
-            class="absolute flex justify-between transform translate-y-[30px] space-x-4 left-12 top-[60%] lg:left-12 lg:top-[75%]">
-            <a href="#slide4" class="btn btn-circle bg-white text-black border-0">❮</a>
-            <a href="#slide2" class="btn btn-circle bg-black text-white border-0">❯</a>
-          </div>
+        <div
+          class="w-[500px] hidden lg:block p-6 space-y-5 lg:right-[10%] lg:bottom-[10%] absolute h-[150px] bg-black rounded-xl text-white">
+          <h3 class="text-[20px]">Meet All the Heroes from the Field</h3>
+          <p class="text-[15px] font-[400] text-gray-500">Are you ready to take your hockey team to new heights?
+            Our elite coaching services are tailored to transform your team into champions!</p>
         </div>
 
-
-        <div id="slide2" class="carousel-item relative w-full">
-          <img src="Images/hocky.png" class="w-full" />
-          <div
-            class="absolute flex justify-between transform translate-y-[30px] space-x-4 left-12 top-[60%] lg:left-12 lg:top-[75%]">
-            <a href="#slide1" class="btn btn-circle bg-white text-black border-0">❮</a>
-            <a href="#slide3" class="btn btn-circle bg-black text-white border-0">❯</a>
-          </div>
-        </div>
-        <div id="slide3" class="carousel-item relative w-full">
-          <img src="Images/woman.jpeg" class="w-full" />
-          <div
-            class="absolute flex justify-between transform translate-y-[30px] space-x-4 left-12 top-[60%] lg:left-12 lg:top-[75%]">
-            <a href="#slide2" class="btn btn-circle bg-white text-black border-0">❮</a>
-            <a href="#slide4" class="btn btn-circle bg-black text-white border-0">❯</a>
-          </div>
-        </div>
-        <div id="slide4" class="carousel-item relative w-full">
-          <img src="Images/h-2.jpg" class="w-full" />
-          <div
-            class="absolute flex justify-between transform translate-y-[30px] space-x-4 left-12 top-[60%] lg:left-12 lg:top-[75%]">
-            <a href="#slide3" class="btn btn-circle bg-white text-black border-0">❮</a>
-            <a href="#slide1" class="btn btn-circle bg-black text-white border-0">❯</a>
-          </div>
+        <div
+          class="absolute flex justify-between transform translate-y-[30px] space-x-4 left-12 top-[60%] lg:left-12 lg:top-[76%]">
+          <a href="#slide4" class="btn btn-circle bg-white text-black border-0">❮</a>
+          <a href="#slide2" class="btn btn-circle bg-black text-white border-0">❯</a>
         </div>
       </div>
-      <div class="responsive-carousel">
+
+
+      <div id="slide2" class="carousel-item relative w-full">
+        <img src="Images/hocky.png" class="w-full" />
         <div
-          class="w-[90%] lg:w-[500px] block mt-6 lg:hidden p-6 lg:space-y-5 lg:right-[10%] lg:bottom-[10%] absolute h-[150px] text-white bg-black rounded-xl">
-          <h3 class="text-[20px]">Meet all the Heroes from the Field</h3>
-          <p class="text-[15px] text-gray-500">
-            Are you ready to take your hockey team to new heights?
-            Our elite coaching services are tailored to transform your team into champions!</p>
+          class="absolute flex justify-between transform translate-y-[30px] space-x-4 left-12 top-[60%] lg:left-12 lg:top-[75%]">
+          <a href="#slide1" class="btn btn-circle bg-white text-black border-0">❮</a>
+          <a href="#slide3" class="btn btn-circle bg-black text-white border-0">❯</a>
+        </div>
+      </div>
+      <div id="slide3" class="carousel-item relative w-full">
+        <img src="Images/woman.jpeg" class="w-full" />
+        <div
+          class="absolute flex justify-between transform translate-y-[30px] space-x-4 left-12 top-[60%] lg:left-12 lg:top-[75%]">
+          <a href="#slide2" class="btn btn-circle bg-white text-black border-0">❮</a>
+          <a href="#slide4" class="btn btn-circle bg-black text-white border-0">❯</a>
+        </div>
+      </div>
+      <div id="slide4" class="carousel-item relative w-full">
+        <img src="Images/h-2.jpg" class="w-full" />
+        <div
+          class="absolute flex justify-between transform translate-y-[30px] space-x-4 left-12 top-[60%] lg:left-12 lg:top-[75%]">
+          <a href="#slide3" class="btn btn-circle bg-white text-black border-0">❮</a>
+          <a href="#slide1" class="btn btn-circle bg-black text-white border-0">❯</a>
         </div>
       </div>
     </div>
+    <div class="caro-b">
+      <div
+          class="w-[95%] lg:w-[500px] block mt-6 lg:hidden p-6 lg:space-y-5 lg:right-[10%] lg:bottom-[10%] absolute h-[151px] text-white bg-black rounded-xl">
+          <h3 class="text-[20px]">Meet all the heroes from the field</h3>
+          <p class="text-[16px] font-[400] text-gray-500">
+            Welcome to the thrilling world of our professional hockey club, 
+            where passion for the game meets unparalleled skill and dedication. 
+          </p>
+      </div>
+  </div>
 
-    <br>
-    <div class="mt-20 lg: mt:hidden">
-      <main>
-        <div class="border-dashed border-black w-full my-7 lg:mt-[100px] my-7"></div>
-        <div class="w-100% lg:w-[600px] text-center mx-auto mt-5 lg:mt-[50px] space-y-5">
-          <h1 class=" mt-10 text-[30px] lg:text-[35px] text-black">Professional Hockey Club</h1>
-          <p class="text-[15px] text-black">
-            Our experienced coaches will design personalized training sessions to address the specific needs and goals
-            of your team.
-            From skill development to strategic gameplay.</p>
+    <!--Professional-->
+  <div class="border-t border-dotted border-black w-full lg:mt-[100px] my-5">
+  <div class="w-100% lg:w-[605px] text-center mx-auto mt-5 lg:mt-[50px] space-y-5">
+    <h1 class="text-[25px] mt-5 lg:text-[36px] font-[800] text-black">
+      Professional Hockey Club
+    </h1>
+    <p class="text-[20px] text-black">
+      Our experienced coaches will design personalized training sessions to address the specific needs and goals
+      of your team.</p>
+  </div>
+  </div>
+
+    <div class="border-t border-dashed border-black w-full my-15"></div>
+
+    <div class="grid grid-col-1 lg:grid-cols-4 mt-[100px] space-y-12 lg:space-y-0">
+      <div class="text-center space-y-5">
+        <div class="radial-progress text-red-500" style="--value: 87" role="progressbar">
+          <span class="text-black">87%</span>
         </div>
-        <div class="border-t border-dotted border-black w-full my-15"></div>
+        <h4 class="text-[20px] text-black">Player Facility</h4>
+        <h6 class="text-[15px]">
+          Our arenas provide the perfect environment for skill development and team building.
+        </h6>
+      </div>
 
-        <div class="grid grid-col-1 lg:grid-cols-4 mt-[100px] space-y-12 lg:space-y-0">
-          <div class="text-center space-y-5">
-            <div class="radial-progress  text-red-500" style="--value: 87" role="progressbar">
-              <span class="text-black">87%</span>
-            </div>
-            <h4 class="text-[20px] text-black">Player Facility</h4>
-            <h6 class="text-[15px]">
-              Our arenas provide the perfect environment for skill development and team building.
-            </h6>
-          </div>
-
-          <div class="text-center space-y-5">
-            <div class="radial-progress text-green-600" style="--value:95" role="progressbar">
-              <span class="text-black">95%</span>
-            </div>
-            <h4 class="text-[20px] font-[600] text-black">
-              Experienced Coach
-            </h4>
-            <h6 class="text-[16px] font-[400]">
-              We tailor our coaching programs to meet the specific needs
-            </h6>
-          </div>
-          <div class="text-center space-y-5">
-            <div class="radial-progress text-yellow-500 font-[800]" style="--value: 90" role="progressbar">
-              <span class="text-black">90%</span>
-            </div>
-            <h4 class="text-[20px] font-[600] text-black">Senior Player</h4>
-            <h6 class="text-[16px] font-[400]">
-              National level senior playes was student here.
-            </h6>
-          </div>
-          <div class="text-center space-y-5">
-            <div class="radial-progress text-[#2c5189] font-[800]" style="--value: 80" role="progressbar">
-              <span class="text-black">80%</span>
-            </div>
-            <h4 class="text-[20px] font-[600] text-black">Training Ground</h4>
-            <h6 class="text-[16px] font-[400]">Training ground fosters athlete development.</h6>
-          </div>
+      <div class="text-center space-y-5">
+        <div class="radial-progress text-green-600" style="--value:95" role="progressbar">
+          <span class="text-black">95%</span>
         </div>
+        <h4 class="text-[20px] font-[600] text-black">
+          Experienced Coach
+        </h4>
+        <h6 class="text-[16px] font-[400]">
+          We tailor our coaching programs to meet the specific needs
+        </h6>
+      </div>
+      <div class="text-center space-y-5">
+        <div class="radial-progress text-yellow-500 font-[800]" style="--value: 90" role="progressbar">
+          <span class="text-black">90%</span>
+        </div>
+        <h4 class="text-[20px] font-[600] text-black">Senior Player</h4>
+        <h6 class="text-[16px] font-[400]">
+          National level senior playes was student here.
+        </h6>
+      </div>
+      <div class="text-center space-y-5">
+        <div class="radial-progress text-[#2c5189] font-[800]" style="--value: 80" role="progressbar">
+          <span class="text-black">80%</span>
+        </div>
+        <h4 class="text-[20px] font-[600] text-black">Training Ground</h4>
+        <h6 class="text-[16px] font-[400]">Training ground fosters athlete development.</h6>
+      </div>
+    </div>
     </div>
   </header>
 
@@ -479,7 +480,7 @@
           <img src="./Images/Group 1171275318.png" class="w-[48px] h-[48px]" alt="" />
           <h4 class="font-[600]">
             <span class="text-[16px] font-[300] text-gray-500">Email :</span>
-            <br/>
+            <br />
             hockeys@support.com
           </h4>
         </div>
@@ -540,7 +541,8 @@
     <!--Social media section-->
 
 
-    <div class="social w-full h-[150px] text-center bg-[#13131808] mb-11 items-center rounded-xl flex flex-col space-y-5 justify-center">
+    <div
+      class="social w-full h-[150px] text-center bg-[#13131808] mb-11 items-center rounded-xl flex flex-col space-y-5 justify-center">
       <h2 class="text-[24px] font-[800] text-[#131318]">Social Media</h2>
       <div class="mx-auto flex space-x-6">
         <a href="" class=""><i class="fa-brands fa-twitter text-[40px]"></i></a>
